# AlyCompiler

./: .bashrc  CMakeLists.txt  README.md
Documentation/: DEVELOPERS.tex
Examples/: comparisons.aly  division_test.aly  downwards_funarg.aly  factorial.aly  simple_math.aly
editor/aly/: README.md
editor/aly/fdetect/: aly.vim
editor/aly/indent/: aly.vim
editor/aly/syntax/: aly.vim
src/: codegen.c  codegen.h  environment.c  environment.h  error.c  error.h  file_io.c  main.c  opt.c  opt.h  parser.c  parser.h  typechecker.c  typechecker.h  vector.h
src/codegen/: codegen_forward.h  intermediate_representation.c  intermediate_representation.h  register_allocation.c  register_allocation.h
src/codegen/x86_64/: arch_x86_64.c  arch_x86_64.h
